assets/css/style.css
@font-face {
    font-family: "SnesItalic";
    src: url("../fonts/SnesItalic.ttf");
}

@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
* {
    box-sizing: border-box;
}

html {
    min-height: 100vh;
    cursor: url("../cursor/normal.cur"), auto;
}

body {
    background: url("../images/game-bg.jpg") no-repeat fixed center;
    font-family: "Montserrat", sans-serif;
    margin: 0;
}

.page-heading {
    padding-top: 40px;
    padding-bottom: 40px;
    color: #fafafa;
    font-size: 100px;
    font-family: "SnesItalic", sans-serif;
}

/*--------------------------------------------Game Intro*/

.landing-page {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    justify-content: center;
    align-items: center;
    z-index: 100;
    font-family: "SnesItalic", sans-serif;
    color: #fafafa;
    padding-right: 100px;
    padding-left: 100px;
}

.landing-small-text {
    font-size: 25px;
    margin-top: 20px;
}

.landing-page.visible, .gameover-page.visible, .victory-page.visible {
    display: flex;
    flex-direction: column;
    animation: landingpage-zoom 500ms forwards;
}

@keyframes landingpage-zoom {
   from {
       background-color: rgba(0, 0, 0, 0);
       font-size: 0;
   }
   to {
    background-color: rgba(0, 0, 0, 0.9);
       font-size: 60px;
   }
}

/*--------------------------------------------Game section*/

.game-info-container {
    grid-column: 1 / -1;
    display: flex;
    justify-content: space-between;
}

.game-info {
    color: #fafafa;
    font-size: 30px;
    font-family: "SnesItalic", sans-serif;
}

.game-container {
    display: grid;
    grid-template-columns: repeat(4, auto);
    grid-gap: 10px;
    margin: 50px;
    justify-content: center;
    perspective: 500px;
}

.card1 {
    position: relative;
    height: 175px;
    width: 125px;
    background-color: transparent;
}

.card-face {
    position: absolute;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    backface-visibility: hidden;
    transition: transform 500ms ease-in-out;
}

.card1.visible .card-back {
    transform: rotateY(-180deg);
}

.card1.visible .card-front {
    transform: rotateY(0);
}

.card-front {
    transform: rotateY(180deg);
}

.front, .back {
    height: 175px;
    width: 125px;
}

.front {
    border-radius: 8px;
}
/*--------------------------------------------Footer*/

footer {
    margin-top: 100px;
    bottom: 0;
}

.contact-footer {
    margin-top: 174px;
}

footer a {
    color: #fafafa;
}

/*--------------------------------------------Contact page*/

.contact-heading {
    font-family: "Exo", sans-serif;
    font-weight: 300;
    margin-top: 25px;
    margin-bottom: 20px;
}


.center-form {
    padding-top: 10px;
    margin: 0 auto;
    max-width: 70%;
}

button[type="submit"] {
    margin-top: 15px;
    margin-bottom: 20px;
    color: #fafafa;
}

@media (max-width: 600px) {
    .game-container {
      grid-template-columns: repeat(2, auto);
    }
  
    .game-info-container {
      flex-direction: column;
      align-items: center;
    }

    .page-heading {
        padding-top: 40px;
        padding-bottom: 40px;
        color: #fafafa;
        font-size: 40px;
        font-family: "SnesItalic", sans-serif;
    }
  }

